--- a/wcss.css
+++ b/wcss.css
@@ -66,7 +66,7 @@ a{font-family:Helvetica,sans-serif;font-weight:bold; color:#003C8C; text-decorat
 
 
 .BackWhite{color:#000!important;background-color:#fff!important}
-.TextGrey{color:#39454b!important}
+.TextGrey{color:#142336!important}
 .Box1{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
 /*.DisplayContainer{position:relative}*/
 .DisplayBottomLeft{position:absolute;left:0;bottom:0}
