--- a/wcss.css
+++ b/wcss.css
@@ -33,7 +33,7 @@ h1,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10
 
 h2{font-family:Helvetica,sans-serif;font-weight:bold;margin:0px 0px; font-size:20px; padding-top:0px;padding-bottom:0px; color:#003C8C}
 
-a{font-family:Helvetica,sans-serif;font-weight:bold; color:#003C8C; text-decoration:none;}
+a{font-family:Helvetica,sans-serif;font-weight:bold; text-decoration:none;} /* color:#003C8C */
 
 .w3-third{float:left;width:100%}
 
