--- a/wcss.css
+++ b/wcss.css
@@ -1,46 +1,15 @@
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
-article,aside,details,figcaption,figure,footer,header,main,menu,nav,section,summary{display:block}
-audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
-audio:not([controls]){display:none;height:0}[hidden],template{display:none}
-a{background-color:transparent;-webkit-text-decoration-skip:objects}
-a:active,a:hover{outline-width:0}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}
-dfn{font-style:italic}mark{background:#ff0;color:#000}
-small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}
-sub{bottom:-0.25em}sup{top:-0.5em}figure{margin:1em 40px}img{border-style:none}svg:not(:root){overflow:hidden}
-code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}hr{box-sizing:content-box;height:0;overflow:visible}
-button,input,select,textarea{font:inherit;margin:0}optgroup{font-weight:bold}
-button,input{overflow:visible}button,select{text-transform:none}
-button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}
-button::-moz-focus-inner, [type=button]::-moz-focus-inner, [type=reset]::-moz-focus-inner, [type=submit]::-moz-focus-inner{border-style:none;padding:0}
-button:-moz-focusring, [type=button]:-moz-focusring, [type=reset]:-moz-focusring, [type=submit]:-moz-focusring{outline:1px dotted ButtonText}
-fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:.35em .625em .75em}
-legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}textarea{overflow:auto}
-[type=checkbox],[type=radio]{padding:0}
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}
-[type=search]{-webkit-appearance:textfield;outline-offset:-2px}
-[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}
-::-webkit-input-placeholder{color:inherit;opacity:0.54}
-::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
-/* End extract */
-html,body{font-family:Verdana,sans-serif;font-size:16px;line-height:1.5}html{overflow-x:hidden}
-h1{font-size:36px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}.w3-serif{font-family:serif}
-h1,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}
 
+body{font-family:Calibri; font-size:18px;}
+/* Verdana,sans-serif */
 
 .hr1{border:0;border-top:1px solid #62748D;margin:12px 0 5px 0}
 .hr2{border:0;border-top:1px solid #62748D;margin:5px 0 5px 0}
 
-h2{font-family:Helvetica,sans-serif;font-weight:bold;margin:0px 0px; font-size:20px; padding-top:0px;padding-bottom:0px; color:#003C8C}
-
-a{font-family:Helvetica,sans-serif;font-weight:bold; text-decoration:none;} /* color:#003C8C */
+a{text-decoration:none; color:#142336}
 
 .w3-third{float:left;width:100%}
-
-/*.w3-col.s1{width:8.33333%}.w3-col.s2{width:16.66666%}.w3-col.s3{width:24.99999%}.w3-col.s4{width:33.33333%}
-.w3-col.s5{width:41.66666%}.w3-col.s6{width:49.99999%}.w3-col.s7{width:58.33333%}.w3-col.s8{width:66.66666%}
-.w3-col.s9{width:74.99999%}.w3-col.s10{width:83.33333%}.w3-col.s11{width:91.66666%}.w3-col.s12{width:99.99999%}
-/* Web responsive and proportion of the left column */
 
 @media (min-width:501px){.w3-third{width:20.0%}
 .w3-col.m5{width:41.66666%}.w3-col.m6,.w3-half{width:49.99999%}.w3-col.m7{width:58.33333%}.w3-col.m8,.w3-twothird{width:66.66666%}
@@ -59,20 +28,26 @@ a{font-family:Helvetica,sans-serif;font-weight:bold; text-decoration:none;} /* c
 .Third{width:33.33333%}
 .Third{padding:0 8px}
 
-.lammps{color:#003C8C; padding-top:0px;padding-bottom:0px; margin:10px 10px;}
-
 .clearfix{overflow: auto;}
-.img2{float: right; padding-left:16px; padding-top:8px}
-
+.img2{float: right; padding-left:8px; padding-top:8px; padding-bottom:8px; margin:5px}
 
 .BackWhite{color:#000!important;background-color:#fff!important}
+
 .TextGrey{color:#142336!important}
+.Container1{background-color: #E6E6E6; padding:0.005em 10px}
+.Container2{background-color: #E6E6E6; padding:5px 5px}
+
+.Container5{background-color: #E6E6FF; padding:5px 5px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
+
+/* FFE6E6 rouge - E6FFE6 vert - E6E6FF blue */
+
 .Box1{box-shadow:0 4px 10px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.19)}
-/*.DisplayContainer{position:relative}*/
+
 .DisplayBottomLeft{position:absolute;left:0;bottom:0}
-.Container1{padding:0.01em 16px}
 .TextBlack{color:#000!important}
-.Large{font-size:20px!important}
+.Large{font-size:24px!important; margin-top:10px; margin-bottom:-5px;}
+.Large2{font-size:20px!important; margin-top:10px; margin-bottom:-10px;}
+
 
 .Twothird{float:left;width:100%}
 .Twothird{width:80%}
@@ -85,8 +60,7 @@ a{font-family:Helvetica,sans-serif;font-weight:bold; text-decoration:none;} /* c
 .MarginBottom{margin-bottom:16px!important}
 .MarginTop{margin-top:16px!important}
 .Padding{padding-top:16px!important;padding-bottom:16px!important}
-/* Bottom box */
+
 .Teal{color:#fff!important;background-color:#003C8C!important}
 .Center{text-align:center!important}
-
 
