--- a/wcss.css
+++ b/wcss.css
@@ -1,7 +1,7 @@
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
 
-body{font-family:Calibri; font-size:18px;}
+body{font-family:Calibri; font-size:18px; background-color:#E6E6E6;}
 /* Verdana,sans-serif */
 
 .hr1{border:0;border-top:1px solid #62748D;margin:12px 0 5px 0}
@@ -34,12 +34,12 @@ a{text-decoration:none; color:#142336}
 .BackWhite{color:#000!important;background-color:#fff!important}
 
 .TextGrey{color:#142336!important}
-.Container1{background-color: #E6E6E6; padding:0.005em 10px}
-.Container2{background-color: #E6E6E6; padding:5px 5px}
+.Container1{background-color: #B6D1FF; padding:0.005em 10px}
+.Container2{background-color: #B6D1FF; padding:5px 5px}
 
-.Container5{background-color: #E6E6FF; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
-.Container6{background-color: #EEF7EF; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
-.Container7{background-color: #F6F6F6; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
+.Container5{background-color: #ffffff; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
+.Container6{background-color: #ffffff; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
+.Container7{background-color: #ffffff; padding:15px 15px; margin-top:0px; margin-bottom:7px; margin-left:-10px}
 
 .ContainerCode{font-family:ubuntu mono; background-color: #341C4D; color: #ffffff; padding:15px 15px; margin-top:0px; margin-bottom:5px; margin-left:5px}
 
