--- a/layouts/partials/page_footer.html
+++ b/layouts/partials/page_footer.html
@@ -16,7 +16,7 @@ $(document).ready(function () {
 
 {{ partial "page_edit" . }}
 {{ partial "tags" . }}
-{{ partial "components/page_sharer" . }}
+<!-- {{ partial "components/page_sharer" . }} <!-- Uncomment for facebook/twitter etc. share button  -->
 {{ partial "page_author" . }}
 {{ partial "comments" . }}
 
