--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -34,8 +34,7 @@
   {{ partial "site_footer_license" . }}
   
   <p class="powered-by">
-   Site built with lightly customized version of <a href="https://github.com/wowchemy/starter-hugo-academic" target="_blank" rel="noopener">Wowchemy Academic</a>. 
-   Code available on <a href="https://github.com/simongravelle/simongravelle.github.io" target="_blank" rel="noopener">Github</a>.
+    The site code is available on <a href="https://github.com/simongravelle/simongravelle.github.io" target="_blank" rel="noopener">Github</a>.
   </p>
   
   <br style="line-height: 5px" />
