--- a/themes/matteo-custom/layouts/partials/site_head.html
+++ b/themes/matteo-custom/layouts/partials/site_head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <a rel="me" href="https://mastodon.social/@simongravelle">Mastodon</a>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   {{ $is_sponsor := site.Params.i_am_a_sponsor | default false }}
   {{ $hide_generator := site.Params.power_ups.hide_generator | default false }}
